# mteapy

./: .gitignore  .gitmodules  LICENSE  README  README.md  _config.yml  cellfie.md  index.md  pyproject.toml  requirements.txt  tide.md
_includes/: footer_custom.html  head_custom.html  nav_footer_custom.html
_layouts/: default.html
assets/css/: custom_style.css
mteapy/: parser.py
mteapy/cmds/: run_mtea.py
mteapy/data/: HumanGEM_genes.tsv
mteapy/tests/: test_utils.py
src/data/: Human_GEM_genes.tsv  task_metadata.tsv  task_metadata_sec.tsv
src/mteapy/: cellfie.py  colors.py  logo_ascii.txt  parser.py  tide.py  utils.py
src/mteapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mteapy/cmds/: run_mtea.py
src/mteapy/data/: HumanGEM_essential_genes_matrix.tsv  task_structure_matrix.tsv
task_info/: task_metadata_sec.tsv
tests/: test.py  test_tide.py  test_utils.py
tests/data/: ags_control_tpm.tsv  mask_lfc_test_expected.tsv  mask_lfc_test_input.tsv
