[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mteapy"
version = "0.0.1"
authors = [
     {name = "Xavier Benedicto Molina", email = "xavier.benedicto@bsc.es"},
     {name = "Miguel Ponce de Leon", email = "miguel.ponce@bsc.es"}
]
description = "Python library for Metabolic Task Enrichment Analysis"
readme = "README"
license = "MIT"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy", 
    "pandas",
    "cobra>=0.25.0",
    "argparse",
    "rich_argparse",    
    "boolean.py",
    "pytest"
]

[project.scripts]
run-mtea = "mteapy.cmds.run_mtea:main"

[project.urls]
"Homepage" = "https://github.com/bsc-life/mteapy"
"Bug Tracker" = "https://github.com/bsc-life/mteapy/issues"

[project.optional-dependencies]
test = ["pytest"]